<resources>
    <string name="app_name">ShoeStore</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_string">Register</string>
    <string name="welcomeContent">Hello and Welcome to the shoe app. \n\n This app is supposed to show you the greatest shoes in our inventory. \n At the same time it is showing the creators ability to create a new app from scratch. \n\n Before you start read the instructions carefully. You can find the instructions by clicking the button below. \n Have a nice day and enjoy your stay</string>
    <string name="Instructions">Instructions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">eMail address</string>
    <string name="password">Password</string>
    <string name="passwordHint">Enter your password</string>
    <string name="emailHint">Enter your eMail</string>
    <string name="instruction_content">This is the shoe store app. Scroll through the contents and feel free to add new shoes to the list. \n\n Click on the button below to start scrolling</string>
    <string name="start">Start</string>
    <string name="company">Company:</string>
    <string name="name">Name:</string>
    <string name="size">Size</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="storeTitle">Martins Shoe Store</string>
</resources>
