<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/instructions_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingEnd="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp"
        android:textAlignment="center"
        tools:context=".InstructionsFragment">

        <TextView
            android:id="@+id/instruction_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/Instructions"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/instructions_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="48dp"
            android:paddingBottom="48dp"
            android:text="@string/instruction_content"
            android:textSize="16sp" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start" />

    </LinearLayout>
</layout>