<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
      <variable
          name="shoe"
          type="com.udacity.shoestore.models.Shoe" />
  </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp">

    <TextView
        android:id="@+id/company_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/company"
        app:flow_horizontalAlign="start"
        app:layout_constraintEnd_toStartOf="@id/companyValue_edittext"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/companyValue_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={shoe.company}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/company_label"
        app:layout_constraintTop_toTopOf="@id/company_label" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintBottom_toTopOf="@id/size_label"
        app:layout_constraintEnd_toStartOf="@id/nameValue_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/companyValue_edittext" />

    <EditText
        android:id="@+id/nameValue_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={shoe.name}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name_label"
        app:layout_constraintTop_toTopOf="@id/name_label" />

    <TextView
        android:id="@+id/size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/size"
        app:layout_constraintEnd_toStartOf="@+id/sizeValue_edittext"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameValue_edittext" />

        <EditText
            android:id="@+id/sizeValue_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@={shoe.stringSize}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/size_label"
            app:layout_constraintTop_toTopOf="@id/size_label" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/description"
        app:flow_horizontalAlign="start"
        app:layout_constraintEnd_toStartOf="@id/descriptionValue_edittext"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sizeValue_edittext" />

    <EditText
        android:id="@+id/descriptionValue_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={shoe.description}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/description_label"
        app:layout_constraintTop_toTopOf="@id/description_label" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionValue_edittext"
            tools:text="@string/save" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/save_button"
            app:layout_constraintTop_toTopOf="@id/save_button"
            tools:text="@string/cancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>