<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- This layout uses the simpler Linear Layout because the Elements dont need to be placed next to each other while keeping th vertical orientation.-->
    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="86dp"
            android:layout_marginEnd="32dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:flow_horizontalAlign="center"/>

        <TextView
            android:id="@+id/welcomeContent_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:maxEms="50"
            android:singleLine="false"
            android:text="@string/welcomeContent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Instructions"
            android:layout_gravity="center"/>
    </LinearLayout>
</layout>