<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructions"
            app:destination="@id/instructions" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.LoginFragment"
        android:label="@string/storeTitle"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/instructions"
        android:name="com.udacity.shoestore.InstructionsFragment"
        android:label="@string/Instructions"
        tools:layout="@layout/fragment_instructions" >
        <action
            android:id="@+id/action_instructions_to_shoeListFragment2"
            app:destination="@id/shoeListFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/welcomeFragment"/>
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.ShoeListFragment"
        android:label="Shoe List"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailsFragment"
            app:destination="@id/shoeDetailsFragment" />
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/shoeListFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragment"
        android:name="com.udacity.shoestore.ShoeDetailsFragment"
        android:label="Add a shoe"
        tools:layout="@layout/fragment_shoe_details" >
        <action
            android:id="@+id/action_shoeDetailsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/shoeListFragment"/>
    </fragment>
</navigation>